# qt-port-synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui
.github/: FUNDING.yml
audio/: Audio.h  Sine.cpp  Square.cpp
audio/envelope/: Envelope.h  IEnvelope.h  NoEnvelope.h
audio/filter/: IFilter.h  LowpassFilter.cpp  NoFilter.h
audio/oscillator/: Lfo.cpp  Lfo.h
audio/voice/: Voice.cpp
audio/voicemanager/: VoiceManager.cpp  VoiceManager.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/audio/: Audio.cpp  Audio.h  DefaultParameters.h  IOscillatorFunction.h  Saw.cpp  Sine.cpp  Square.cpp  Triangle.cpp
src/audio/envelope/: Envelope.cpp  Envelope.h  IEnvelope.h  NoEnvelope.h
src/audio/filter/: BandpassFilter.cpp  BandpassFilter.h  FilterTypes.h  HighpassFilter.cpp  HighpassFilter.h  IFilter.h  LowpassFilter.cpp  LowpassFilter.h  NoFilter.h
src/audio/modulation/: IModulator.h  ModulationValue.cpp  ModulationValue.h
src/audio/oscillator/: ILfo.h  Lfo.cpp  Lfo.h  NoOscillator.h
src/audio/voice/: IVoice.h  Voice.cpp  Voice.h
src/audio/voicemanager/: Param.cpp  Param.h  VoiceManager.cpp  VoiceManager.h
src/midi/: IMidiInputListener.h  MidiChannelSelection.h  MidiDevice.cpp  MidiDevice.h  MidiIn.cpp  MidiIn.h  MidiReceiver.cpp  MidiReceiver.h
